# ezRFS

./: .gitignore  README.adoc
ezlfs/: pom.xml
ezlfs/src/main/java/com/iconiux/ezlfs/model/: FileMetadata.java
ezlfs/src/main/java/com/iconiux/ezlfs/service/: DiskFileStorageService.java  EzLocalFileStorage.java  IFileStorage.java
ezlfs/src/main/java/com/iconiux/ezlfs/util/: Base128Util.java  EzHashUtils.java  PathUtils.java
ezlfs/src/test/java/com/iconiux/ezlfs/util/: PathUtilsTest.java
ezrfs-daemon/: bump_build.sh  bump_build_deploy.sh  deploy.sh  pom.xml  shutdown.sh  shutdown_deploy.sh
ezrfs-daemon/src/main/java/com/iconiux/ezrfs/daemon/: ConstantHolder.java  EzRFSApplication.java
ezrfs-daemon/src/main/java/com/iconiux/ezrfs/daemon/client/: UploadClient.java
ezrfs-daemon/src/main/java/com/iconiux/ezrfs/daemon/config/: CacheConfiguration.java  CoreFeignConfiguration.java  (+2 more)
ezrfs-daemon/src/main/resources/: application.properties  banner.txt
ezrfs-daemon/src/main/resources/templates/: index.html
ezrfs-daemon/src/test/java/: CUIDGenerator.java  CuidTest.java
ezrfs-tray/: bump-build-deb.sh  bump_build.sh  jpackage.sh  pom.xml
ezrfs-tray/doc/: icons.adoc
ezrfs-tray/src/main/bash/: ezrfs-tray
ezrfs-tray/src/main/java/com/iconiux/ezrfs/tray/: AppMainForm.java  AppMainForm.jfd  ConstantHolder.java  TrayApplication.java
ezrfs-tray/src/main/resources/: application.properties
ezrfs-tray/src/test/java/com/iconiux/ezrfs/gui/: Demo.java  SysTrayDemo.java
tools/api/: alive.sh  download.sh  local_upload.sh  meta.sh  upload.sh  upload_auth.sh
tools/api/local/: alive.sh  local_download.sh
tools/cron/: ezlfs_find_and_rm_old_files.sh  ezlfs_list_old_files.sh
tools/docker/: Dockerfile  docker-build.sh  docker-compose.yml  service-up.sh
tools/nginx/etc/nginx/: htpasswd  nginx.conf
tools/nginx/etc/nginx/conf.d/: default  ezrfs.conf
tools/repack/: repack_jar.sh
tools/script/: bump.application.version.sh  bump.maven.version.sh
tools/systemd/: ezrfsd.service
tools/systemd/jdk/: ezrfsd.service
tools/systemd/native/: ezrfsd.service
tools/tray/cmake-deb/: CMakeLists.txt  build-cmake-deb.sh
tools/tray/deb/deb/control/: control
tools/tray/izpack/izpack/: install.xml 
tools/tray/jpackage/: build-jpackage-dmg.sh  build-jpackage-exe.sh
tools/tray/native/: build-native.sh
(+66 files in other folders)
